--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
-<li><a href="performance/index.html">Postgres Performance In 15 Minutes</a></li>
+<li><a href="performance_in_15_min/index.html">Postgres Performance In 15 Minutes</a></li>
 </ul>
 
 </body>
