Added Explain Explained talk.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ hosting.  Below are what's in here.
 <li><a href="performance_in_15_min/index.html">Postgres Performance In 15 Minutes</a></li>
 </ul>
 
+<ul>
+<li><a href="explain_explained/index.html">Explain Explained</a></li>
+</ul>
+
 </body>
 
 </html>
