Updated For Great Stats; added Ipython talk.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@ hosting.  Below are what's in here.
 <li><a href="explain_explained/index.html">Explain Explained</a></li>
 </ul>
 
+<ul>
+<li><a href="postgres_python_great_stats/index.html">Postgres + Scipy For Great Stats</a></li>
+<li>There's also <a href="postgres_python_great_stats/builddb.sql">a SQL file</a></li>
+</ul>
+
+<ul>
+<li><a href="ipython_graphs/">Ad-Hoc Graphs with Ipython</a><br />
+This one is a couple of IPython notebooks</li>
+</ul>
+
 </body>
 
 </html>
