Fixed link to ipython notebooks.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ hosting.  Below are what's in here.
 </ul>
 
 <ul>
-<li><a href="ipython_graphs/">Ad-Hoc Graphs with Ipython</a><br />
+<li><a href="https://github.com/jberkus/jberkus.github.io/tree/master/ipython_graphs">Ad-Hoc Graphs with Ipython</a><br />
 This one is a couple of IPython notebooks</li>
 </ul>
 
