Updated with photo, contact information.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
 
+<img src="jberkus_fist.jpg">Me haranguing OSCON audiences.  Photo copyright 2010 James Duncan Davidson for O'Reilly, https://www.flickr.com/photos/oreillyconf/4815591777</img>
+
 <p>
 This page is (will be) full of open source stuff I work on, and 
 talks I've given, which require hosting, but don't require real
@@ -33,6 +35,18 @@ hosting.  Below are what's in here.
 <li><a href="https://github.com/jberkus/jberkus.github.io/tree/master/ipython_graphs">Ad-Hoc Graphs with Ipython</a><br />
 This one is a couple of IPython notebooks</li>
 </ul>
+
+<h1>Contact</h1>
+
+<p>
+My employer, <a href="http://www.pgexperts.com">PostgreSQL Experts</a>
+</p><p>
+My tech blog, <a href="http://www.databasesoup.com">Database Soup</a>
+</p><p>
+Twitter <a href="http://twitter.com/FuzzyChef">@FuzzyChef</a>
+</p><p>
+My food and pottery blog <a href="http://www.fuzzychef.org">FuzzyChef</a>
+</p>
 
 </body>
 
