--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<img src="jberkus_fist.jpg">Me haranguing OSCON audiences.  Photo copyright 2010 James Duncan Davidson for O'Reilly, https://www.flickr.com/photos/oreillyconf/4815591777</img>
+<img src="jberkus_fist.jpg" alt="Me haranguing OSCON audiences.  Photo copyright 2010 James Duncan Davidson for O'Reilly, https://www.flickr.com/photos/oreillyconf/4815591777">
 
 <p>
 This page is (will be) full of open source stuff I work on, and 
