--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+<li><a href="docker_gt_virtualenv">Docker &gt; Virtualenv</a></li>
+</ul>
+
+<ul>
 <li><a href="performance_in_15_min/index.html">Postgres Performance In 15 Minutes</a></li>
 </ul>
 
