--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ This one is a couple of IPython notebooks</li>
 <h1>Contact</h1>
 
 <p>
-My employer, <a href="http://www.pgexperts.com">PostgreSQL Experts</a>
+My employer, <a href="http://www.redhat.com">Red Hat</a>, where I work on <http://www.projectatomic.io>Project Atomic</a>.
 </p><p>
 My tech blog, <a href="http://www.databasesoup.com">Database Soup</a>
 </p><p>
