--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="full_automatic_db">Full Automatic Database</a></li>
+</ul>
+
+<ul>
 <li><a href="95_big_data">PostgreSQL 9.5 for Big Data</a></li>
 </ul>
 
