Added a whole bunch of links to YouTube videos.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="jberkus_fist.jpg" alt="Me haranguing OSCON audiences.  Photo copyright 2010 James Duncan Davidson for O'Reilly, https://www.flickr.com/photos/oreillyconf/4815591777">
 
 <p>
-This page is (will be) full of open source stuff I work on, and 
+This page is (will be) full of open source stuff I work on, and
 talks I've given, which require hosting, but don't require real
 hosting.  Below are what's in here.
 </p>
@@ -46,6 +46,46 @@ hosting.  Below are what's in here.
 <ul>
 <li><a href="https://github.com/jberkus/jberkus.github.io/tree/master/ipython_graphs">Ad-Hoc Graphs with Ipython</a><br />
 This one is a couple of IPython notebooks</li>
+</ul>
+
+<h1>Videos</h1>
+
+<p>
+These are videos of various talks I've given, in no particular order.  Some are better
+quality than others.
+</p>
+
+<h2>Ignite and Lightning Talks</h2>
+
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=VG5ZOOb5T9o">Seven Deadly Sins of Software Deployment</a></li>
+  <li><a href="https://www.youtube.com/watch?v=nPG4sK_glls">Scale Fail</a></li>
+  <li><a href="https://www.youtube.com/watch?v=Qw313OsFpqA">10 Ways to Wreck Your Database</a></li>
+  <li><a href="https://www.youtube.com/watch?v=pOTrOw770yY">The 7 Habits of Highly Ineffective Presenters</a></li>
+  <li><a href="https://www.youtube.com/watch?v=JzQDS2VT0yc">7 Ways to Crash Your DB Server</a></li>
+<!--
+  <li><a href=""></a></li>
+-->
+</ul>
+
+<h2>Full-length videos</h2>
+
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=qoQRGl_P2aQ">The Accidental DBA</a>(tutorial)</li>
+  <li><a href="https://www.youtube.com/watch?v=aPeNhJM75lo">EXPLAIN Explained</a></li>
+  <li><a href="https://www.youtube.com/watch?v=dBeXS5aFLNc">Postgres Performance in 15 Minutes</a></li>
+  <li><a href="https://www.youtube.com/watch?v=GobQw9LMEaw">PostgreSQL Replication Tutorial</a></li>
+  <li><a href="https://www.youtube.com/watch?v=WV5P2DgxPoI">Shootout at the AWS Corral</a></li>
+  <li><a href="https://www.youtube.com/watch?v=b8UrFHtBMws">Data Warehousing 101</a></li>
+  <li><a href="https://www.youtube.com/watch?v=oeOsVjaFB9I">PostgreSQL 9.4: FlexScalePerfSQL</a></li>
+  <li><a href="https://www.youtube.com/watch?v=eH37pcvrmgs">Super Jumbo Deluxe</a></li>
+  <li><a href="https://www.youtube.com/watch?v=5VvtLUWc8IY">Postgres + SciPy 4 Great Stats</a></li>
+  <li><a href="https://www.youtube.com/watch?v=OH9WSEiMsAw">Patroni: Your Patron Saint of HA</a></li>
+  <li><a href="https://www.youtube.com/watch?v=Tqb5964JzlI">HOWTO DR</a> (disaster recovery)</li>
+  <li><a href="https://www.youtube.com/watch?v=t8DKgP9roxQ">Ad-Hoc Database Graphs with IPython</a></li>
+  <!--
+    <li><a href=""></a></li>
+  -->
 </ul>
 
 <h1>Contact</h1>
