--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="love_failover">How I Learned To Stop Worrying and Love Failover</a></li>
+</ul>
+
+<ul>
   <li><a href="full_automatic_db">Full Automatic Database</a></li>
 </ul>
 
