Automacon presentation for Bots Not Cattle.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ hosting.  Below are what's in here.
 <ul>
   <li><a href="bots_not_cattle">Bots, Not Cattle</a>(25min version)</li>
   <li><a href="pdf_presos/bots_not_cattle_ignite.pdf">Bots, Not Cattle</a>(Ignite talk, PDF)</li>
+  <li><a href="pdf_presos/bots_not_cattle_automacon.pdf">Bots, Not Cattle</a>(Automacon Keynote, PDF)</li>
 </ul>
 
 <ul>
