Added link to ansible 101

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="https://github.com/jberkus/ansible101">Ansible 101 self-paced mini-tutorial</a></li>
+</ul>
+
+
+<ul>
   <li><a href="bots_not_cattle">Bots, Not Cattle</a>(25min version)</li>
   <li><a href="pdf_presos/bots_not_cattle_ignite.pdf">Bots, Not Cattle</a>(Ignite talk, PDF)</li>
   <li><a href="pdf_presos/bots_not_cattle_automacon.pdf">Bots, Not Cattle</a>(Automacon Keynote, PDF)</li>
