--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="https://github.com/jberkus/petset_postgres">Postgres and PetSet</a></li>
+</ul>
+
+<ul>
   <li><a href="https://github.com/jberkus/ansible101">Ansible 101 self-paced mini-tutorial</a></li>
 </ul>
 
