--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
-  <li><a href="https://github.com/jberkus/petset_postgres">Postgres and PetSet</a></li>
+  <li><a href="petset_postgres">Postgres and PetSet</a></li>
 </ul>
 
 <ul>
