--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="state_happeing">State: That's What's Happening</a></li>
+</ul>
+
+<ul>
   <li><a href="petset_postgres">Postgres and PetSet</a></li>
 </ul>
 
