Presentations for SCALE, initial commit.  Will be another commit after presentations.

--- a/deploy_statefulset/index.html
+++ b/deploy_statefulset/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kubernetes 101</title>
+    <title>Deploying with StatefulSet</title>
     <meta charset="utf-8">
         <style type="text/css">
 /* Basic theme for remark slides */
@@ -143,8 +143,8 @@ blockquote {
 }
 
 .remark-slide-content h5 {
-    font-size: 96px;
-    color: #ff0000;
+    font-size: 30px;
+    color: #00989e;
 }
 
 .remark-slide-content h6 {
@@ -238,7 +238,7 @@ blockquote {
     </script>
     <script>
       var slideshow = remark.create({
-  sourceUrl: 'kube101.md'
+  sourceUrl: 'state.md'
 });
     </script>
   </body>
