--- a/kubernetes_14/index.html
+++ b/kubernetes_14/index.html
@@ -143,8 +143,8 @@ blockquote {
 }
 
 .remark-slide-content h5 {
-    font-size: 96px;
-    color: #ff0000;
+    font-size: 30px;
+    color: #00989e;
 }
 
 .remark-slide-content h6 {
@@ -238,7 +238,7 @@ blockquote {
     </script>
     <script>
       var slideshow = remark.create({
-  sourceUrl: 'kube101.md'
+  sourceUrl: 'kube13.md'
 });
     </script>
   </body>
