--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ hosting.  Below are what's in here.
 </ul>
 
 <ul>
-  <li><a href="state_happeing">State: That's What's Happening</a></li>
+  <li><a href="state_happening">State: That's What's Happening</a></li>
 </ul>
 
 <ul>
