Final edits to presentation for KubeCon EU.

--- a/postgres_helm/index.html
+++ b/postgres_helm/index.html
@@ -132,6 +132,7 @@ blockquote {
     font-size: 60px;
     vertical-align: bottom;
     text-align: center;
+    color: #FFFF00;
 }
 
 .remark-slide-content h4 {
