Added shrodinger's elephant preso.

--- a/perplexed/index.html
+++ b/perplexed/index.html
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
 b,
 strong {
     font-weight: 1000;
-    color: #FFFF00;
+    color: #4169E1;
 }
 
 blockquote {
@@ -147,11 +147,11 @@ blockquote {
 
 .remark-slide-content h5 {
   font-size: 96px;
-  color: #FFA500;
+  color: #FFD700;
   vertical-align: top;
   text-align: center;
   font-weight: 2000;
-  text-shadow: 7px 7px 4px #000;
+  text-shadow: 7px 7px 7px #000;
 }
 
 .remark-slide-content h6 {
