--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="shrodinger">Schrödinger's Elephant</a></li>
+</ul>
+
+<ul>
   <li><a href="perplexed">Containers: A Guide for the Perplexed</a></li>
 </ul>
 
