Added links, slides for vm-in-container.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 <img src="jberkus_fist.jpg" alt="Me haranguing OSCON audiences.  Photo copyright 2010 James Duncan Davidson for O'Reilly, https://www.flickr.com/photos/oreillyconf/4815591777">
 
 <p>
-This page is (will be) full of open source stuff I work on, and
+This page is full of open source stuff I work on, and
 talks I've given, which require hosting, but don't require real
 hosting.  Below are what's in here.
 </p>
 
 <h1>Talks</h1>
+
+<ul>
+  <li><a href="vm-in-container">You Got Your VM In My Container</a></li>
+</ul>
+
+<ul>
+  <li><a href="https://github.com/jberkus/annotated.conf">Postgres GUCS Tutorial</a></li>
+</ul>
 
 <ul>
   <li><a href="kube_native_pg">Kube-Native Postgres</a></li>
