--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="pdf_presos/kubernetes_111.pdf">Kubernetes 1.11 LT</a></li>
+</ul>
+  
+<ul>
   <li><a href="vm-in-container">You Got Your VM In My Container</a></li>
 </ul>
 
