Added links to CentOS Kubernetes preso and code.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="kube_on_centos">Setting up Kubernetes on CentOS</a></li>
+  <li><a href="https://github.com/jberkus/centos-kubernetes">Scripts repository for CentOS Kubeadm install</a></li>
+</ul>
+
+
+<ul>
   <li><a href="pdf_presos/kubernetes_111.pdf">Kubernetes 1.11 LT</a></li>
 </ul>
-  
+
 <ul>
   <li><a href="vm-in-container">You Got Your VM In My Container</a></li>
 </ul>
