Add slides for What Sponsors Want.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="pdf_presos/what_sponsors_want.pdf">What Sponsors Want</a></li>
+</ul>
+
+
+<ul>
   <li><a href="kube_on_centos">Setting up Kubernetes on CentOS</a></li>
   <li><a href="https://github.com/jberkus/centos-kubernetes">Scripts repository for CentOS Kubeadm install</a></li>
 </ul>
