Add Databases and License talk per State of Source Conf.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="dbs_and_licenses.pdf">Why Database Projects Can't Leave Licenses Alone</a></li>
+</ul>
+
+
+<ul>
   <li><a href="pdf_presos/what_sponsors_want.pdf">What Sponsors Want</a></li>
 </ul>
 
