--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
-  <li><a href="dbs_and_licenses.pdf">Why Database Projects Can't Leave Licenses Alone</a></li>
+  <li><a href="pdf_presos/dbs_and_licenses.pdf">Why Database Projects Can't Leave Licenses Alone</a></li>
 </ul>
 
 
