Add video links.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
-  <li><a href="pdf_presos/dbs_and_licenses.pdf">Why Database Projects Can't Leave Licenses Alone</a></li>
+  <li><a href="pdf_presos/dbs_and_licenses.pdf">Why Database Projects Can't Leave Licenses Alone</a> (<a href="https://drive.google.com/file/d/1MXv8Jctvw3q0uybr5qZVP-u4nlgk1ISL/view?usp=sharing">video</a>)</li>
 </ul>
 
 
@@ -146,6 +146,7 @@ quality than others.
 <h2>Full-length videos</h2>
 
 <ul>
+  <li><a href="https://drive.google.com/file/d/1MXv8Jctvw3q0uybr5qZVP-u4nlgk1ISL/view?usp=sharing">Why Database Projects Can't Leave Licenses Alone</a></li>
   <li><a href="https://www.youtube.com/watch?v=qoQRGl_P2aQ">The Accidental DBA</a>(tutorial)</li>
   <li><a href="https://www.youtube.com/watch?v=aPeNhJM75lo">EXPLAIN Explained</a></li>
   <li><a href="https://www.youtube.com/watch?v=dBeXS5aFLNc">Postgres Performance in 15 Minutes</a></li>
@@ -166,7 +167,7 @@ quality than others.
 <h1>Contact</h1>
 
 <p>
-My employer, <a href="http://www.redhat.com">Red Hat</a>, where I work on <http://www.projectatomic.io>Project Atomic</a>.
+My employer, <a href="http://www.redhat.com">Red Hat</a>, where I work on <http://www.kubernetes.io>Kubernetes</a>.
 </p><p>
 My tech blog, <a href="http://www.databasesoup.com">Database Soup</a>
 </p><p>
