--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="explain2/">Explain Explained (for Prisma.js)</a>
+</ul>
+
+<ul>
   <li><a href="pdf_presos/dbs_and_licenses.pdf">Why Database Projects Can't Leave Licenses Alone</a> (<a href="https://drive.google.com/file/d/1MXv8Jctvw3q0uybr5qZVP-u4nlgk1ISL/view?usp=sharing">video</a>)</li>
 </ul>
 
