--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@ hosting.  Below are what's in here.
 <h1>Talks</h1>
 
 <ul>
+  <li><a href="gov6/">Governance: Six Types and Three Templates</a>
+</ul>
+
+<ul>
   <li><a href="explain2/">Explain Explained (for Prisma.js)</a>
 </ul>
 
